WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76819
[GStreamer] fix WebAudio build after
r105431
https://bugs.webkit.org/show_bug.cgi?id=76819
Summary
[GStreamer] fix WebAudio build after r105431
Philippe Normand
Reported
2012-01-23 03:20:42 PST
AudioChannel::data() usage needs to be fixed in 2 places of the audio/gstreamer code.
Attachments
Patch
(2.95 KB, patch)
2012-01-23 03:24 PST
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2012-01-23 03:24:03 PST
Created
attachment 123536
[details]
Patch
Philippe Normand
Comment 2
2012-01-23 08:24:34 PST
Comment on
attachment 123536
[details]
Patch Clearing flags on attachment: 123536 Committed
r105626
: <
http://trac.webkit.org/changeset/105626
>
Philippe Normand
Comment 3
2012-01-23 08:24:40 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug