[GStreamer] fix WebAudio build after r105431 https://bugs.webkit.org/show_bug.cgi?id=76819

Reviewed by Martin Robinson.

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::copyGstreamerBuffersToAudioChannel): Use mutableData()
when copying.
* platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp:
(webKitWebAudioSrcLoop): Drop constness when setting the buffer
data pointer.

Canonical link: https://commits.webkit.org/93660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105626 268f45cc-cd09-0410-ab3c-d52691b4dbfc