Source/WebCore/platform/audio/gstreamer/WebKitWebAudioSourceGStreamer.cpp
@@ -333,7 +333,7 @@ static void webKitWebAudioSrcLoop(WebKitWebAudioSrc* src)
         ASSERT(buffer);
         ASSERT(!GST_BUFFER_MALLOCDATA(buffer));
 
-        GST_BUFFER_DATA(buffer) = reinterpret_cast<guint8*>(priv->bus->channel(index)->data());
+        GST_BUFFER_DATA(buffer) = reinterpret_cast<guint8*>(const_cast<float*>(priv->bus->channel(index)->data()));
         GST_BUFFER_SIZE(buffer) = bufferSize;
         GST_BUFFER_OFFSET(buffer) = priv->currentBufferOffset;
         GST_BUFFER_OFFSET_END(buffer) = priv->currentBufferOffset + priv->framesToPull;
